src/tui/snapshots/harnx__tui__tests__basic_message_and_streaming_response.snap
---
source: src/tui/tests.rs
assertion_line: 262
expression: rendered
---
Transcript
> Test message

Hello from the mock client!

















• Input
