src/tui/snapshots/harnx__tui__tests__help_in_tui.snap
---
source: src/tui/tests.rs
expression: rendered
---
.rag                     Initialize or access RAG
.edit rag-docs           Add or remove documents from an existing RAG
.rebuild rag             Rebuild RAG for document changes
.sources rag             Show citation sources used in last query
.info rag                Show RAG info
.exit rag                Leave RAG
.attach                  Attach a file to the next message
.detach                  Remove attached files
.macro                   Execute a macro
.mcp                     Manage MCP servers
.file                    Include files, directories, URLs or commands
.continue                Continue previous response
.regenerate              Regenerate last response
.copy                    Copy last response
.set                     Modify runtime settings
.delete                  Delete agents, sessions, RAGs, or macros
.exit                    Exit the interactive session

Type ::: to start multi-line editing, type ::: to finish it.
Press Ctrl+O to open an editor for editing the input buffer.
Press Ctrl+C to cancel the response, Ctrl+D to exit.
• Input
