src/tui/snapshots/harnx__tui__tests__info_session_without_session_in_tui.snap
---
source: src/tui/tests.rs
assertion_line: 306
expression: rendered
---
Welcome to harnx 0.30.0  •  Type .help for commands, Tab to
complete.

error: No session







• Input
