src/tui/snapshots/harnx__tui__tests__input_word_wraps_long_line.snap
---
source: src/tui/tests.rs
assertion_line: 665
expression: rendered
---
Transcript
Welcome to harnx 0.30.0  •
Type .help for commands, Tab
to complete.


• Input
the quick brown fox jumps over
 the lazy dog
