src/tui/snapshots/harnx__tui__tests__screen_overflow_and_word_wrap.snap
---
source: src/tui/tests.rs
expression: rendered
---
Transcript
wrap them cleanly across lines without
clipping or splitting words awkwardly.
Each sentence keeps going long enough to
force vertical overflow in the
transcript area and prove scrolling
still leaves wrapped content visible.
• Input
