src/tui/snapshots/harnx__tui__tests__sub_agent_heading_transitions_in_tui.snap
---
source: src/tui/tests.rs
assertion_line: 513
expression: rendered
---
Welcome to harnx 0.30.0  •  Type .help for commands, Tab to complete.
Top-level assistant opening response.Top-level assistant closes
response.

> argus ▸ session-1
sub-agent tool call
sub-agent follow-up output
> hephaestus ▸ session-2
other sub-agent output






• 🤖  main-agent ▸ main-session
